hard-gists/9ad6a265aac887fa26c1/run.log
=== Docker Run Log for 9ad6a265aac887fa26c1 ===
Started at: Mi 29. Okt 18:38:31 CET 2025

[2025-10-29 18:38:31] START: Running container for 9ad6a265aac887fa26c1
[2025-10-29 18:38:31] SUCCESS: Container 5da8402b8acd6b3acd5b05f2ede1c65a781ebf67baccda03620fee2c013d7a3a started for 9ad6a265aac887fa26c1
=== Container logs for 9ad6a265aac887fa26c1 ===
  File "/snippet.py", line 174
    print e
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9ad6a265aac887fa26c1 ===
[2025-10-29 18:38:34] INFO: Container 5da8402b8acd6b3acd5b05f2ede1c65a781ebf67baccda03620fee2c013d7a3a has stopped
